// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bff server plugin prepareApiServer should work well 1`] = `
[
  {
    "filename": "<ROOT>/fixtures/function/api/hello.ts",
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/hello",
    "routePath": "/hello",
  },
  {
    "filename": "<ROOT>/fixtures/function/api/upload.ts",
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/upload",
    "routePath": "/upload",
  },
  {
    "filename": "<ROOT>/fixtures/function/api/user/[id].ts",
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/user/:id",
    "routePath": "/user/:id",
  },
]
`;

exports[`bff server plugin prepareApiServer should work well with prefix 1`] = `
[
  {
    "filename": "<ROOT>/fixtures/function/api/hello.ts",
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/hello",
    "routePath": "/api/hello",
  },
  {
    "filename": "<ROOT>/fixtures/function/api/upload.ts",
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/upload",
    "routePath": "/api/upload",
  },
  {
    "filename": "<ROOT>/fixtures/function/api/user/[id].ts",
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/user/:id",
    "routePath": "/api/user/:id",
  },
]
`;
